--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                 <h1>Conquest 2023</h1>
                 <p>My team National University Fervent were able to qualify and participate in one of the biggest acadamic tournaments in the Philippines.</p>
                 <p>Here are some of my memories.</p>
-                <button class="btnbtn" onclick="window.location.href='Profile.html'">Back to Home</button>
+                <button class="btnbtn" onclick="window.location.href='index.html'">Back to Home</button>
             </div>
             <div class="col">
                 <div class="card card1">
