--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
                     
             <nav>
                 <ul>
-                    <li><a href="Profile.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="">Portfolio</a></li>
 
                 </ul>
