--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,19 @@
 </head>
 <body>
     <div class="container">
-            <a href="" class="logo">Portfolio</a>
-            <div class="navbar" class="active">
-                    
+        <a href="" class="logo">Portfolio</a>
+        <div class="navbar" class="active">
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">Portfolio</a></li>
-
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="resume.html">Resume</a></li> <!-- Added Resume link -->
+                    <li><a href="login.php">Contact</a></li> <!-- Added Contact Me link -->
                 </ul>
             </nav>
             <img src="" class="menu-icon">
         </div>
+
 
         <div class="row">
             <div class="col">
