--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,10 @@
     <body>
     <div class="container">
         <div class="left_side">
+            <div class="back">
+                <a href="index.html">Back to Homepage</a>
+            </div>
+    
             <div class="profileText">
                 <div class="imgBx">
                     <img src="img.jpg">
@@ -162,6 +166,7 @@
                 <li><i class="fa fa-handshake-o" aria-hidden="true"></i>Socializing</li>
                 <li><i class="fa fa-book" aria-hidden="true"></i>Reading</li>
             </ul>
+
 
         </div>
 
